<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_main">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="100"
        android:title="@string/action_sort"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/action_view"
        android:orderInCategory="100"
        android:title="@string/action_view"
        app:showAsAction="never" />-->
    <item
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/action_set_as_home"
        android:title="@string/action_home"/>
    <!--<item
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/action_add_tag"
        android:title="@string/action_tag"/>-->
    <item
        android:id="@+id/action_close"
        android:orderInCategory="100"
        android:title="@string/action_close"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

</menu>

